--- a/index.html
+++ b/index.html
@@ -24,5 +24,5 @@ layout: default
 </div>
 
 <div class="footer">
-    <p title="http://erictreacy.me">&copy; 2017 </p>
+    <p title="Took this theme from here: http://erictreacy.me">&copy; 2017 </p>
 </div>
