--- a/index.html
+++ b/index.html
@@ -1,24 +1,6 @@
 ---
-layout: default
+layout: home
 ---
 
-<div class="header">
-    <h1><a href="./">{{ site.name }}</a></h1>
-    <ul>
-        {% for item in site.data.navigation %}
-        <li>
-            <a href="{{ item.url }}">{{ item.title }}</a>
-        </li>
-        {% endfor %}
-    </ul>
-</div>
-<div class="blog">
-    <h1></h1>
-    <ul>
-        {% for post in site.posts %}
-        <li>
-            <span class="date">{{ post.date | date: '%Y %b %d' }}</span> - <a href="{{ post.url }}">{{ post.title }}</a>
-        </li>
-        {% endfor %}
-    </ul>
-</div>
+<p align="center"><img src="../assets/img/me.jpeg" alt="me" height="100px" style = "border-radius:50%" /></p>
+
