--- a/notes/index.html
+++ b/notes/index.html
@@ -1,13 +1,43 @@
 ---
-layout: default
+layout: notes
 ---
 
-<div class="blog">
-    <ul>
-        {% for post in site.posts %}
-        <li>
-            <span class="date">{{ post.date | date: '%Y %b %d' }}</span> - <a href="{{ post.url }}">{{ post.title }}</a>
-        </li>
-        {% endfor %}
-    </ul>
-</div>
+<!-- <h1 class="about__title">Research Notes</h1>
+<ul>
+    {% for post in site.posts %}
+    {{if post.ta}}
+    <li>
+        <span class="date">{{ post.date | date: '%Y %b %d' }}</span> - <a href="{{ post.url }}">{{ post.title }}</a>
+    </li>
+    {% endfor %}
+</ul>
+
+<h1 class="about__title">Other Notes</h1>
+<ul>
+    {% for post in site.posts %}
+    <li>
+        <span class="date">{{ post.date | date: '%Y %b %d' }}</span> - <a href="{{ post.url }}">{{ post.title }}</a>
+    </li>
+    {% endfor %}
+</ul> -->
+
+<ul class="tags">
+
+	{% for tag in site.tags %}
+		
+		<li>
+			<h1 class="about__title"> {{tag[0]}} notes</h1>
+			<ul>
+				{% for post in site.posts %}
+					{% if post.tags[0] == tag[0] %}
+					<li>
+				        <span class="date">{{ post.date | date: '%Y %b %d' }}</span> - <a href="{{ post.url }}">{{ post.title }}</a>
+				    </li>
+					{% endif %}
+				{% endfor %}
+			</ul>
+		</li>
+
+	{% endfor %}
+
+</ul>
