new home figure

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 ---
 layout: home
 ---
-
-<p align="center"><img src="../assets/img/me.jpeg" alt="me" height="100px" style = "border-radius:50%" /></p>
-
+<figure align="center">
+	<img src="../assets/img/me.jpeg" alt="me" width="50%" style = "border-radius:50%" />
+	<figcaption >Vismay pretending to be a real doctor</figcaption>
+</figure>
